--- a/OAuthEstudo/pom.xml
+++ b/OAuthEstudo/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.1.RELEASE</version>
+		<version>2.5.0</version>
 		<relativePath /> 
 	</parent>
 
@@ -74,6 +74,12 @@
       <version>5.2.0</version>
   </dependency>
 
+  <dependency>
+           <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.1.3.Final</version>
+  </dependency>
+
   <!-- WEB -->
   <dependency>
       <groupId>javax.servlet</groupId>
@@ -91,6 +97,13 @@
                         <version>2.6</version>
                 </dependency>
 
+<!-- Log do Java -->
+<dependency>
+  <groupId>org.apache.logging.log4j</groupId>
+  <artifactId>log4j-core</artifactId>
+  <version>2.3.2</version>
+</dependency>
+
 <dependency>
   <groupId>junit</groupId>
   <artifactId>junit</artifactId>
@@ -103,8 +116,10 @@
 
 <plugins>
 
-
-
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.1</version>
+        </plugin>
 
   <plugin>
     <groupId>org.jacoco</groupId>
@@ -126,7 +141,21 @@
     </executions>
   </plugin>  
 
-<plugin>
+
+ <!-- Pegar os testes para execucao -->
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.4.3</version>
+    <configuration>
+        <includes>
+            <include>**/*Test.java</include>
+        </includes>
+    </configuration>
+</plugin>
+
+<!--
+  <plugin>
    <groupId>org.sonarsource.scanner.maven</groupId>
    <artifactId>sonar-maven-plugin</artifactId>
    <version>3.5.0.1254</version>
@@ -139,7 +168,7 @@
           </goals>
         </execution>
     </executions>
-</plugin>
+</plugin> -->
 
 </plugins> 
 </build>
