--- a/Oauth2Simples/pom.xml
+++ b/Oauth2Simples/pom.xml
@@ -8,6 +8,11 @@
   <name>Oauth2Simples</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <logback.version>1.2.12</logback.version>
+    <slf4j.version>1.7.36</slf4j.version>
+  </properties>
+
   <!-- Spring Framework -->
   <parent>
     	<groupId>org.springframework.boot</groupId>
@@ -29,6 +34,11 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
     
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
      
     <!-- Flyway -->
   <dependency>
@@ -51,6 +61,50 @@
       <artifactId>jjwt</artifactId>
       <version>0.9.1</version>
     </dependency>
+  
+  <!-- Jacoco para Cobertura de testes-->
+  <dependency>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.7</version>
+  </dependency>
+
+  <!-- Logs para execução-->
+  <dependency>
+     <groupId>org.slf4j</groupId>
+     <artifactId>slf4j-api</artifactId>
+     <version>${slf4j.version}</version>
+  </dependency>
+
+  <dependency>
+     <groupId>ch.qos.logback</groupId>
+     <artifactId>logback-classic</artifactId>
+     <version>${logback.version}</version>
+  </dependency>
 
   </dependencies>
+
+  <build>
+      <plugins>
+    <plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.7</version>
+      <executions>
+        <execution>
+          <id>prepare-agent</id>
+          <goals>
+            <goal>prepare-agent</goal>
+          </goals>
+        </execution>
+        <execution>
+          <id>report</id>
+          <goals>
+            <goal>report</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+  </build>
 </project>
