--- a/Oauth2Simples/src/main/resources/application.yml
+++ b/Oauth2Simples/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 
 jwt.secret: "teste123"
+url.retrieve.stocks.data: https://query1.finance.yahoo.com/v7/finance/download/
 server:
     port: 5000
 
 #Banco de Dados Local
 spring:
+    jackson: 
+      time-zone: America/Sao_Paulo
     datasource:
       url: jdbc:h2:mem:bancotest;MODE=MYSQL
       username: admin
@@ -16,7 +19,7 @@ spring:
            enabled: true
            settings.web-allow-others: true
     jpa: 
-       hibernate.ddl-auto: none     
+       hibernate.ddl-auto: update     
 flyway:
    url: jdbc:h2:mem:bancotest
    baseline-on-migrate: true
