--- a/Oauth2Simples/pom.xml
+++ b/Oauth2Simples/pom.xml
@@ -94,6 +94,13 @@
   <version>4.12</version>
  </dependency>
 
+    <!-- Apache POI para a criação de Excel -->
+ 		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+
 
   </dependencies>
 
