--- a/Oauth2Simples/pom.xml
+++ b/Oauth2Simples/pom.xml
@@ -17,7 +17,7 @@
   <parent>
     	<groupId>org.springframework.boot</groupId>
 		  <artifactId>spring-boot-starter-parent</artifactId>
-		  <version>2.5.0</version>
+		  <version>2.7.0</version>
 		  <relativePath /> 
   </parent>
 
@@ -59,13 +59,36 @@
       <scope>runtime</scope>
     </dependency>
 
-    
-    <!-- JWT -->
     <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt</artifactId>
-      <version>0.9.1</version>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.36</version>
     </dependency>
+
+    <!-- Lombok -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.26</version>
+        <scope>provided</scope>
+    </dependency>
+
+    <!-- JWT -->
+  <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.11.5</version>
+  </dependency>
+  <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-impl</artifactId>
+    <version>0.11.5</version>
+  </dependency>
+  <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId>
+    <version>0.11.5</version>
+  </dependency>
   
   <!-- Jacoco para Cobertura de testes-->
   <dependency>
