--- a/Oauth2Simples/pom.xml
+++ b/Oauth2Simples/pom.xml
@@ -49,14 +49,14 @@
   <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
-      <version>5.2.0</version>
+      <version>7.14.0</version>
   </dependency>
 
   <!-- Banco de Dados Local-->
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <version>1.4.200</version>
     </dependency>
 
     <dependency>
@@ -136,6 +136,14 @@
        <scope>provided</scope>
       <type>zip</type>
     </dependency>
+
+    <dependency>
+    <groupId>jakarta.servlet</groupId>
+    <artifactId>jakarta.servlet-api</artifactId>
+    <version>5.0.0</version>
+    <scope>provided</scope>
+</dependency>
+
  
 
   </dependencies>
