--- a/Oauth2Simples/pom.xml
+++ b/Oauth2Simples/pom.xml
@@ -51,6 +51,12 @@
       <artifactId>flyway-core</artifactId>
       <version>7.14.0</version>
   </dependency>
+  <dependency>
+          <groupId>org.flywaydb.flyway-test-extensions</groupId>
+          <artifactId>flyway-spring-test</artifactId>
+          <version>4.0</version>
+          <scope>test</scope>
+  </dependency>
 
   <!-- Banco de Dados Local-->
     <dependency>
@@ -113,7 +119,7 @@
 <dependency>
   <groupId>junit</groupId>
   <artifactId>junit</artifactId>
-  <version>4.12</version>
+  <version>5.9.1</version>
  </dependency>
 
     <!-- Apache POI para a criação de Excel -->
