--- a/Oauth2Simples/src/main/resources/application-dev.yml
+++ b/Oauth2Simples/src/main/resources/application-dev.yml
@@ -13,7 +13,7 @@ spring:
     jackson: 
       time-zone: America/Sao_Paulo
     datasource:
-      url: jdbc:h2:mem:bancotest;MODE=PostgreSQL
+      url: jdbc:h2:mem:bancodev;MODE=PostgreSQL
       username: admin
       password: admin
       driverClassName: org.h2.Driver
@@ -25,10 +25,10 @@ spring:
     jpa: 
        hibernate.ddl-auto: update
 flyway:
-   url: jdbc:h2:mem:bancotest
+   url: jdbc:h2:mem:bancodev
    baseline-on-migrate: true
    enabled: true
    validate-on-migrate: true
-   locations=classpath: db/migration
+   locations=classpath: db/migration/dev
 
  # Logging do Servidor  
