--- a/Oauth2Simples/src/test/resources/application-test.yml
+++ b/Oauth2Simples/src/test/resources/application-test.yml
@@ -29,6 +29,6 @@ flyway:
    baseline-on-migrate: true
    enabled: true
    validate-on-migrate: true
-   locations=classpath: db/migration
+   locations: classpath:db/migration/test
 
  # Logging do Servidor  
