--- a/Oauth2Simples/pom.xml
+++ b/Oauth2Simples/pom.xml
@@ -119,7 +119,7 @@
 <dependency>
   <groupId>junit</groupId>
   <artifactId>junit</artifactId>
-  <version>4.12</version>
+  <version>4.13.2</version>
  </dependency>
 
     <!-- Apache POI para a criação de Excel -->
@@ -212,6 +212,14 @@
       </execution>     
     </executions>
 </plugin>
+
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                  <trimStackTrace>true</trimStackTrace>
+              </configuration>
+          </plugin>
 
 
         <plugin>
