--- a/kotlin/kotlinEstudos/pom.xml
+++ b/kotlin/kotlinEstudos/pom.xml
@@ -23,30 +23,47 @@
    <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-	 </dependency>
+   </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
    <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>1.8.0</version>
     </dependency>
+	  <!-- Jacoco para cobertura de testes-->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.8.7</version>
+    </dependency> 
+	<dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+    
+	</dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>1.4.200</version>
+    </dependency>
+	    <!-- Flyway -->
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>7.14.0</version>
     </dependency>
   </dependencies>
 
 <!-- Adequação para kotlin-->
 <build>
 		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
-		<testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
-    <plugins>
+		<testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
+        <plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -60,7 +77,9 @@
 					</args>
 					<compilerPlugins>
 						<plugin>spring</plugin>
-						<plugin>jpa</plugin>
+						<plugin>jpa</plugin>						
+                        <plugin>all-open</plugin>
+                        <plugin>no-arg</plugin>
 					</compilerPlugins>
 				</configuration>
 				<dependencies>
@@ -74,9 +93,9 @@
 						<artifactId>kotlin-maven-noarg</artifactId>
 						<version>${kotlin.version}</version>
 					</dependency>
-				</dependencies>
+				</dependencies>				
 			</plugin>
-      <plugin>
+            <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
@@ -87,6 +106,26 @@
 				  </archive>
 				</configuration>
 			</plugin>
+			
+		    <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <version>0.8.8</version>
+              <executions>
+                 <execution>
+                   <goals>
+                      <goal>prepare-agent</goal>
+                   </goals>
+              </execution>    
+              <execution>
+                 <id>report</id>
+                 <phase>prepare-package</phase>
+                 <goals>
+                 <goal>report</goal>
+                </goals>
+        </execution>
+    </executions>
+  </plugin>
       </plugins>
 </build>
 
