--- a/kotlin/kotlinEstudos/src/main/resources/application.yml
+++ b/kotlin/kotlinEstudos/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
            settings.web-allow-others: true
     jpa: 
        hibernate.ddl-auto: update
+flyway:
+   url: jdbc:h2:mem:bancodev
+   baseline-on-migrate: true
+   enabled: true
+   validate-on-migrate: true
+   locations=classpath: db/migration
