--- a/kotlin/kotlinEstudos/pom.xml
+++ b/kotlin/kotlinEstudos/pom.xml
@@ -16,6 +16,10 @@
 		  <relativePath /> 
   </parent>
   <dependencies>
+   <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -56,6 +60,19 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>7.14.0</version>
+    </dependency>
+    <!-- Lombok -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.26</version>
+        <scope>provided</scope>
+    </dependency>
+        <!-- JWT -->
+    <dependency>
+       <groupId>io.jsonwebtoken</groupId>
+       <artifactId>jjwt-api</artifactId>
+       <version>0.11.5</version>
     </dependency>
   </dependencies>
 
