--- a/kotlin/kotlinEstudos/pom.xml
+++ b/kotlin/kotlinEstudos/pom.xml
@@ -4,7 +4,7 @@
   <groupId>br.com.kotlin.estudos</groupId>
   <artifactId>kotlinEstudos</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>kotlinEstudos</name>
   <url>http://maven.apache.org</url>
 
@@ -38,6 +38,11 @@
       <artifactId>kotlin-stdlib-jdk8</artifactId>
       <version>1.8.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-reflect</artifactId>
+      <version>1.6.0</version>
+    </dependency>
 	  <!-- Jacoco para cobertura de testes-->
     <dependency>
       <groupId>org.jacoco</groupId>
@@ -69,11 +74,21 @@
         <scope>provided</scope>
     </dependency>
         <!-- JWT -->
-    <dependency>
-       <groupId>io.jsonwebtoken</groupId>
-       <artifactId>jjwt-api</artifactId>
-       <version>0.11.5</version>
-    </dependency>
+  <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.11.5</version>
+  </dependency>
+  <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-impl</artifactId>
+    <version>0.11.5</version>
+  </dependency>
+  <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId>
+    <version>0.11.5</version>
+  </dependency>
   </dependencies>
 
 <!-- Adequação para kotlin-->
