--- a/kotlin/kotlinEstudos/build.gradle
+++ b/kotlin/kotlinEstudos/build.gradle
@@ -28,8 +28,10 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'  
     runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.hibernate:hibernate-core:6.2.13.Final' 
+    implementation 'org.hibernate:hibernate-core:6.2.13.Final'
+    implementation 'org.hibernate.orm:hibernate-core'
     implementation 'org.projectlombok:lombok:1.18.24'
+    implementation 'org.flywaydb:flyway-core:9.22.0'
 }
 
 
