--- a/kotlin/kotlinEstudos/build.gradle
+++ b/kotlin/kotlinEstudos/build.gradle
@@ -32,6 +32,18 @@ dependencies {
     implementation 'org.hibernate.orm:hibernate-core'
     implementation 'org.projectlombok:lombok:1.18.24'
     implementation 'org.flywaydb:flyway-core:9.22.0'
+    //- Avaliar se é necessario mesmo a implantação
+    implementation("io.ktor:ktor-client-core:2.0.0")
+    implementation("io.ktor:ktor-client-cio:2.0.0")
+    implementation("io.ktor:ktor-client-content-negotiation:2.0.0")
+    implementation("io.ktor:ktor-serialization-kotlinx-json:2.0.0")
+    implementation("io.ktor:ktor-client-logging:2.0.0") // Adicione esta linha para habilitar o logging
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+
+    implementation("org.springframework.boot:spring-boot-starter-webflux")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
+    implementation("org.reactivestreams:reactive-streams:1.0.3")
+    implementation("com.google.code.gson:gson:2.10.1")
 }
 
 
