--- a/kotlin/kotlinEstudos/build.gradle
+++ b/kotlin/kotlinEstudos/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation("org.springframework.boot:spring-boot-starter-websocket")
     implementation("org.apache.logging.log4j:log4j-api:2.20.0")
     implementation("org.apache.logging.log4j:log4j-core:2.20.0")
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -49,6 +50,10 @@ dependencies {
     implementation("com.google.code.gson:gson:2.10.1")
 }
 
+tasks.test {
+    useJUnitPlatform()
+    systemProperty("spring.profiles.active", "test")
+}
 
 tasks.withType(KotlinCompile) {
 	kotlinOptions {
