--- a/kotlin/kotlinEstudos/build.gradle
+++ b/kotlin/kotlinEstudos/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.9.10'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.9.10'
     id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.10'
+    id("jacoco")
 }
 
 group = "br.com.planilha"
@@ -23,6 +24,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation("org.springframework.boot:spring-boot-starter-websocket")
     implementation("org.springframework.boot:spring-boot-starter-validation")
+    testImplementation("org.springframework.boot:spring-boot-starter-test")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
+    testImplementation("com.h2database:h2")
+    testImplementation("org.flywaydb:flyway-core:9.22.0")
     implementation("io.github.microutils:kotlin-logging:3.0.5")
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -50,9 +55,24 @@ dependencies {
     implementation("com.google.code.gson:gson:2.10.1")
 }
 
+jacoco {
+    toolVersion = "0.8.11"
+}
+
 tasks.test {
     useJUnitPlatform()
     systemProperty("spring.profiles.active", "test")
+    finalizedBy(tasks.jacocoTestReport)
+}
+
+tasks.jacocoTestReport {
+    dependsOn(tasks.test)
+    reports {
+        xml.required.set(true) // Required for SonarQube
+        html.required.set(true) // For local viewing
+        csv.required.set(false)
+    }
+    executionData.setFrom(fileTree(buildDir) { include("jacoco/test.exec") })
 }
 
 tasks.withType(KotlinCompile) {
