--- a/kotlin/kotlinEstudos/src/test/resources/application-test.yml
+++ b/kotlin/kotlinEstudos/src/test/resources/application-test.yml
@@ -1,4 +1,7 @@
 spring:
+  config:
+    activate:
+      on-profile: test
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
     username: sa
@@ -6,7 +9,16 @@ spring:
     driver-class-name: org.h2.Driver
   flyway:
     enabled: true
-    locations: classpath:db/migration/test
+    url: jdbc:h2:mem:testdb
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    locations: classpath:db/migration
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
+
+  logging:
+    level:
+      org.flywaydb: DEBUG
+      org.hibernate: DEBUG
+      org.h2: DEBUG
