--- a/kotlin/kotlinEstudos/build.gradle
+++ b/kotlin/kotlinEstudos/build.gradle
@@ -46,17 +46,20 @@ dependencies {
     implementation("io.ktor:ktor-client-cio:2.0.0")
     implementation("io.ktor:ktor-client-content-negotiation:2.0.0")
     implementation("io.ktor:ktor-serialization-kotlinx-json:2.0.0")
-    implementation("io.ktor:ktor-client-logging:2.0.0") // Adicione esta linha para habilitar o logging
+    implementation("io.ktor:ktor-client-logging:2.0.0")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
 
     implementation("org.springframework.boot:spring-boot-starter-webflux")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
     implementation("org.reactivestreams:reactive-streams:1.0.3")
     implementation("com.google.code.gson:gson:2.10.1")
+    testImplementation("org.jetbrains.kotlin:kotlin-test:1.9.20") // Add this
+    testImplementation("org.jetbrains.kotlin:kotlin-test-junit5:1.9.20")
+    testImplementation("org.mockito.kotlin:mockito-kotlin:5.3.1")
 }
 
 jacoco {
-    toolVersion = "0.8.11"
+    toolVersion = "0.8.12"
 }
 
 tasks.test {
