--- a/kotlin/kotlinEstudos/src/main/resources/application-dev.yml
+++ b/kotlin/kotlinEstudos/src/main/resources/application-dev.yml
@@ -10,6 +10,13 @@ server:
 spring:
     jackson: 
       time-zone: America/Sao_Paulo
+    flyway:
+        #url: jdbc:h2:mem:bancodev
+        #baseline-on-migrate: true
+        #enabled: true
+        #validate-on-migrate: true
+      locations:
+        - classpath:db/migration/common
     datasource:
       url: jdbc:h2:mem:bancodev;MODE=PostgreSQL
       username: admin
@@ -22,10 +29,3 @@ spring:
            settings.web-allow-others: true
     jpa: 
        hibernate.ddl-auto: update
-flyway:
-   url: jdbc:h2:mem:bancodev
-   baseline-on-migrate: true
-   enabled: true
-   validate-on-migrate: true
-   locations:
-     - classpath:db/migration/common
