--- a/kotlin/kotlinEstudos/src/main/resources/application-test.yml
+++ b/kotlin/kotlinEstudos/src/main/resources/application-test.yml
@@ -11,7 +11,7 @@ spring:
     jackson: 
       time-zone: America/Sao_Paulo
     datasource:
-      url: jdbc:h2:mem:bancodev;MODE=PostgreSQL
+      url: jdbc:h2:mem:bancotest;MODE=PostgreSQL
       username: admin
       password: admin
       driverClassName: org.h2.Driver
@@ -23,9 +23,10 @@ spring:
     jpa: 
        hibernate.ddl-auto: update
 flyway:
-   url: jdbc:h2:mem:bancodev
+   url: jdbc:h2:mem:bancotest
    baseline-on-migrate: true
    enabled: true
    validate-on-migrate: true
    locations:
-     - classpath:db/migration/common
+      - classpath:db/migration/common
+      - classpath:db/migration/test
